--- a/students/render.yaml
+++ b/students/render.yaml
@@ -4,7 +4,12 @@ services:
     env: static
     buildCommand: npm run build
     staticPublishPath: ./build
+    headers:
+      - source: "/*"
+        headers:
+          - key: "X-Frame-Options"
+            value: "DENY"
     routes:
       - type: rewrite
-        source: /*
-        destination: /index.html
+        source: "/*"
+        destination: "/index.html"
