Fix COOP headers for Google sign-in popup

--- a/students/render.yaml
+++ b/students/render.yaml
@@ -7,8 +7,10 @@ services:
     headers:
       - source: "/*"
         headers:
-          - key: "X-Frame-Options"
-            value: "DENY"
+          - key: "Cross-Origin-Opener-Policy"
+            value: "same-origin-allow-popups"
+          - key: "Cross-Origin-Embedder-Policy"
+            value: "unsafe-none"
     routes:
       - type: rewrite
         source: "/*"
